packages/uow-audit/main/default/objects/UoWAuditTransaction__c/UoWAuditTransaction__c.object-meta.xml
<CustomObject>
    <description>Parent audit record for UnitOfWork transactions with summary statistics, timeline, risk assessment, policy evaluation, and governor limits tracking.</description>
    <label>Audit Transaction</label>
    <nameField>
        <label>Transaction Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>