packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/ArchivalMode__c.field-meta.xml
<CustomField>
    <fullName>ArchivalMode__c</fullName>
    <label>Archival Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PURGE</fullName>
            </value>
            <value>
                <fullName>ARCHIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>