packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/ArchiveDate__c.field-meta.xml
<CustomField>
    <fullName>ArchiveDate__c</fullName>
    <description>Date when this record becomes eligible for archival. Calculated as CreatedDate + RetentionDays__c. Used by an archival job to find records to archive.</description>
    <inlineHelpText>Date when this record is eligible for archival/deletion.</inlineHelpText>
    <label>Archive Date</label>
    <type>Date</type>
</CustomField>