packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/AsyncDepth__c.field-meta.xml
<CustomField>
    <fullName>AsyncDepth__c</fullName>
    <description>Depth in async execution chain (0 = root transaction).</description>
    <inlineHelpText>Depth in async execution chain (0 = root transaction).</inlineHelpText>
    <label>Async Depth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>