packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/CalloutSummary__c.field-meta.xml
<CustomField>
    <fullName>CalloutSummary__c</fullName>
    <description>Summary of Callout work item execution status with executed/failure counts.</description>
    <formula>IF(TotalCalloutsPlanned__c = 0,
    &quot;&quot;,
    IF(TotalCalloutsPlanned__c = TotalCalloutsProcessed__c &amp;&amp; TotalCalloutsExecuted__c = TotalCalloutsProcessed__c,
        &quot;✅ &quot; &amp; TEXT(TotalCalloutsExecuted__c) &amp; &quot; executed&quot;,
        IF(TotalCalloutsProcessed__c &gt; 0 &amp;&amp; TotalCalloutsExecuted__c = 0,
            &quot;❌ &quot; &amp; TEXT(TotalCalloutsProcessed__c) &amp; &quot; failed&quot;,
            IF(TotalCalloutsProcessed__c = 0,
                &quot;⏸️ &quot; &amp; TEXT(TotalCalloutsPlanned__c) &amp; &quot; planned, not executed&quot;,
                &quot;⚠️ &quot; &amp; TEXT(TotalCalloutsExecuted__c) &amp; &quot;/&quot; &amp; TEXT(TotalCalloutsPlanned__c) &amp; &quot; executed&quot; &amp;
                IF(TotalCalloutsProcessed__c - TotalCalloutsExecuted__c &gt; 0,
                    &quot; (&quot; &amp; TEXT(TotalCalloutsProcessed__c - TotalCalloutsExecuted__c) &amp; &quot; failed&quot; &amp;
                    IF(TotalCalloutsPlanned__c - TotalCalloutsProcessed__c &gt; 0,
                        &quot;, &quot; &amp; TEXT(TotalCalloutsPlanned__c - TotalCalloutsProcessed__c) &amp; &quot; not executed)&quot;,
                        &quot;)&quot;
                    ),
                    IF(TotalCalloutsPlanned__c - TotalCalloutsProcessed__c &gt; 0,
                        &quot; (&quot; &amp; TEXT(TotalCalloutsPlanned__c - TotalCalloutsProcessed__c) &amp; &quot; not executed)&quot;,
                        &quot;&quot;
                    )
                )
            )
        )
    )
)</formula>
    <inlineHelpText>Summary of Callout work item execution status.</inlineHelpText>
    <label>Callout Summary</label>
    <type>Text</type>
</CustomField>