packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/CascadeDelete__c.field-meta.xml
<CustomField>
    <fullName>CascadeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cascade Delete</label>
    <type>Checkbox</type>
</CustomField>