packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/CommitMode__c.field-meta.xml
<CustomField>
    <fullName>CommitMode__c</fullName>
    <description>Commit mode used for transaction (SYNC, ASYNC).</description>
    <inlineHelpText>Commit mode used for transaction (SYNC, ASYNC).</inlineHelpText>
    <label>Commit Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SYNC</fullName>
                <label>Sync</label>
            </value>
            <value>
                <fullName>ASYNC</fullName>
                <label>Async</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>