packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/ConfigurationName__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationName__c</fullName>
    <description>Name of the UoWConfiguration__mdt record used for this transaction.</description>
    <inlineHelpText>Name of the UoWConfiguration__mdt record used for this transaction.</inlineHelpText>
    <label>Configuration Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>