packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/ConfigurationSnapshot__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationSnapshot__c</fullName>
    <description>JSON snapshot of UoW configuration at transaction execution time.</description>
    <inlineHelpText>JSON snapshot of UoW configuration at transaction execution time.</inlineHelpText>
    <label>Configuration Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>