packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>UUID correlation ID for distributed tracing across async boundaries. Same correlation ID is shared across parent and child async transactions.</description>
    <externalId>true</externalId>
    <inlineHelpText>UUID correlation ID for distributed tracing across async boundaries. Same correlation ID is shared across parent and child async transactions.</inlineHelpText>
    <label>Correlation ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>