packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/CustomMetadata__c.field-meta.xml
<CustomField>
    <fullName>CustomMetadata__c</fullName>
    <description>JSON representation of custom metadata from result.</description>
    <inlineHelpText>JSON representation of custom metadata from result.</inlineHelpText>
    <label>Custom Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>