packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>User-provided description of what this transaction does. Helps identify transactions in list views.</description>
    <inlineHelpText>Brief description of the transaction purpose (e.g., &quot;Create loan application with documents&quot;)</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>