packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/EmailSummary__c.field-meta.xml
<CustomField>
    <fullName>EmailSummary__c</fullName>
    <description>Summary of Email work item execution status with sent/failure counts.</description>
    <formula>IF(TotalEmailsPlanned__c = 0,
    &quot;&quot;,
    IF(TotalEmailsPlanned__c = TotalEmailsProcessed__c &amp;&amp; TotalEmailsSent__c = TotalEmailsProcessed__c,
        &quot;✅ &quot; &amp; TEXT(TotalEmailsSent__c) &amp; &quot; sent&quot;,
        IF(TotalEmailsProcessed__c &gt; 0 &amp;&amp; TotalEmailsSent__c = 0,
            &quot;❌ &quot; &amp; TEXT(TotalEmailsProcessed__c) &amp; &quot; failed&quot;,
            IF(TotalEmailsProcessed__c = 0,
                &quot;⏸️ &quot; &amp; TEXT(TotalEmailsPlanned__c) &amp; &quot; planned, not executed&quot;,
                &quot;⚠️ &quot; &amp; TEXT(TotalEmailsSent__c) &amp; &quot;/&quot; &amp; TEXT(TotalEmailsPlanned__c) &amp; &quot; sent&quot; &amp;
                IF(TotalEmailsProcessed__c - TotalEmailsSent__c &gt; 0,
                    &quot; (&quot; &amp; TEXT(TotalEmailsProcessed__c - TotalEmailsSent__c) &amp; &quot; failed&quot; &amp;
                    IF(TotalEmailsPlanned__c - TotalEmailsProcessed__c &gt; 0,
                        &quot;, &quot; &amp; TEXT(TotalEmailsPlanned__c - TotalEmailsProcessed__c) &amp; &quot; not executed)&quot;,
                        &quot;)&quot;
                    ),
                    IF(TotalEmailsPlanned__c - TotalEmailsProcessed__c &gt; 0,
                        &quot; (&quot; &amp; TEXT(TotalEmailsPlanned__c - TotalEmailsProcessed__c) &amp; &quot; not executed)&quot;,
                        &quot;&quot;
                    )
                )
            )
        )
    )
)</formula>
    <inlineHelpText>Summary of Email work item execution status.</inlineHelpText>
    <label>Email Summary</label>
    <type>Text</type>
</CustomField>