packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>Transaction end timestamp.</description>
    <inlineHelpText>Transaction end timestamp.</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>