packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/ErrorCount__c.field-meta.xml
<CustomField>
    <fullName>ErrorCount__c</fullName>
    <description>Total number of errors across all operations in this transaction.</description>
    <inlineHelpText>Total number of errors across all operations in this transaction.</inlineHelpText>
    <label>Error Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>