packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/ErrorMessages__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessages__c</fullName>
    <description>JSON array of error messages from the transaction.</description>
    <inlineHelpText>JSON array of error messages from the transaction.</inlineHelpText>
    <label>Error Messages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>