packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/EventPublishFailureCount__c.field-meta.xml
<CustomField>
    <fullName>EventPublishFailureCount__c</fullName>
    <description>Count of Event Publish Failure records</description>
    <label>Event Publish Failure Count</label>
    <summaryForeignKey>UoWEventPublishFailure__c.AuditTransaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>