packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/EventSummary__c.field-meta.xml
<CustomField>
    <fullName>EventSummary__c</fullName>
    <description>Summary of Platform Event work item execution status with published/failure counts.</description>
    <formula>IF(TotalEventsPlanned__c = 0,
    &quot;&quot;,
    IF(TotalEventsPlanned__c = TotalEventsProcessed__c &amp;&amp; TotalEventsPublished__c = TotalEventsProcessed__c,
        &quot;✅ &quot; &amp; TEXT(TotalEventsPublished__c) &amp; &quot; published&quot;,
        IF(TotalEventsProcessed__c &gt; 0 &amp;&amp; TotalEventsPublished__c = 0,
            &quot;❌ &quot; &amp; TEXT(TotalEventsProcessed__c) &amp; &quot; failed&quot;,
            IF(TotalEventsProcessed__c = 0,
                &quot;⏸️ &quot; &amp; TEXT(TotalEventsPlanned__c) &amp; &quot; planned, not executed&quot;,
                &quot;⚠️ &quot; &amp; TEXT(TotalEventsPublished__c) &amp; &quot;/&quot; &amp; TEXT(TotalEventsPlanned__c) &amp; &quot; published&quot; &amp;
                IF(TotalEventsProcessed__c - TotalEventsPublished__c &gt; 0,
                    &quot; (&quot; &amp; TEXT(TotalEventsProcessed__c - TotalEventsPublished__c) &amp; &quot; failed&quot; &amp;
                    IF(TotalEventsPlanned__c - TotalEventsProcessed__c &gt; 0,
                        &quot;, &quot; &amp; TEXT(TotalEventsPlanned__c - TotalEventsProcessed__c) &amp; &quot; not executed)&quot;,
                        &quot;)&quot;
                    ),
                    IF(TotalEventsPlanned__c - TotalEventsProcessed__c &gt; 0,
                        &quot; (&quot; &amp; TEXT(TotalEventsPlanned__c - TotalEventsProcessed__c) &amp; &quot; not executed)&quot;,
                        &quot;&quot;
                    )
                )
            )
        )
    )
)</formula>
    <inlineHelpText>Summary of Platform Event work item execution status.</inlineHelpText>
    <label>Event Summary</label>
    <type>Text</type>
</CustomField>