packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/ExecutionContext__c.field-meta.xml
<CustomField>
    <fullName>ExecutionContext__c</fullName>
    <description>Execution context type (SYNC, QUEUEABLE, BATCH, FUTURE, TRIGGER, etc.).</description>
    <inlineHelpText>Execution context type (SYNC, QUEUEABLE, BATCH, FUTURE, TRIGGER, etc.).</inlineHelpText>
    <label>Execution Context</label>
    <length>50</length>
    <type>Text</type>
</CustomField>