packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/ExecutionTimeMs__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTimeMs__c</fullName>
    <description>Transaction execution time in milliseconds. Populated from Apex using DateTime.getTime() for millisecond precision.</description>
    <inlineHelpText>Transaction execution time in milliseconds.</inlineHelpText>
    <label>Execution Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>