packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/FlowSummary__c.field-meta.xml
<CustomField>
    <fullName>FlowSummary__c</fullName>
    <description>Summary of Flow work item execution status with executed/failure counts.</description>
    <formula>IF(TotalFlowsPlanned__c = 0,
    &quot;&quot;,
    IF(TotalFlowsPlanned__c = TotalFlowsProcessed__c &amp;&amp; TotalFlowsExecuted__c = TotalFlowsProcessed__c,
        &quot;✅ &quot; &amp; TEXT(TotalFlowsExecuted__c) &amp; &quot; executed&quot;,
        IF(TotalFlowsProcessed__c &gt; 0 &amp;&amp; TotalFlowsExecuted__c = 0,
            &quot;❌ &quot; &amp; TEXT(TotalFlowsProcessed__c) &amp; &quot; failed&quot;,
            IF(TotalFlowsProcessed__c = 0,
                &quot;⏸️ &quot; &amp; TEXT(TotalFlowsPlanned__c) &amp; &quot; planned, not executed&quot;,
                &quot;⚠️ &quot; &amp; TEXT(TotalFlowsExecuted__c) &amp; &quot;/&quot; &amp; TEXT(TotalFlowsPlanned__c) &amp; &quot; executed&quot; &amp;
                IF(TotalFlowsProcessed__c - TotalFlowsExecuted__c &gt; 0,
                    &quot; (&quot; &amp; TEXT(TotalFlowsProcessed__c - TotalFlowsExecuted__c) &amp; &quot; failed&quot; &amp;
                    IF(TotalFlowsPlanned__c - TotalFlowsProcessed__c &gt; 0,
                        &quot;, &quot; &amp; TEXT(TotalFlowsPlanned__c - TotalFlowsProcessed__c) &amp; &quot; not executed)&quot;,
                        &quot;)&quot;
                    ),
                    IF(TotalFlowsPlanned__c - TotalFlowsProcessed__c &gt; 0,
                        &quot; (&quot; &amp; TEXT(TotalFlowsPlanned__c - TotalFlowsProcessed__c) &amp; &quot; not executed)&quot;,
                        &quot;&quot;
                    )
                )
            )
        )
    )
)</formula>
    <inlineHelpText>Summary of Flow work item execution status.</inlineHelpText>
    <label>Flow Summary</label>
    <type>Text</type>
</CustomField>