packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/HasChildTransactions__c.field-meta.xml
<CustomField>
    <fullName>HasChildTransactions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this transaction has child transactions linked to it. Used for UI rendering of child transaction related lists.</description>
    <inlineHelpText>True if child transactions exist for this parent transaction</inlineHelpText>
    <label>Has Child Transactions</label>
    <type>Checkbox</type>
</CustomField>