packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/HasParent__c.field-meta.xml
<CustomField>
    <fullName>HasParent__c</fullName>
    <formula>NOT( ISBLANK(ParentTransaction__c) )</formula>
    <label>Has Parent</label>
    <type>Checkbox</type>
</CustomField>