packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/HasTransactionScenario__c.field-meta.xml
<CustomField>
    <fullName>HasTransactionScenario__c</fullName>
    <formula>OR( NOT (ISBLANK(TransactionScenario__c)), NOT (ISBLANK( TransactionScenarioName__c )) )</formula>
    <label>Has Transaction Scenario</label>
    <type>Checkbox</type>
</CustomField>