packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/IsArchivable__c.field-meta.xml
<CustomField>
    <fullName>IsArchivable__c</fullName>
    <formula>ArchiveDate__c &lt;=  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archivable</label>
    <type>Checkbox</type>
</CustomField>