packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/IsDryRun__c.field-meta.xml
<CustomField>
    <fullName>IsDryRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this was a dry run (no actual DML performed).</description>
    <inlineHelpText>Indicates if this was a dry run (no actual DML performed).</inlineHelpText>
    <label>Is Dry Run</label>
    <type>Checkbox</type>
</CustomField>