packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsAggregateQueries__c.field-meta.xml
<CustomField>
    <fullName>LimitsAggregateQueries__c</fullName>
    <description>Aggregate Queries usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsAggregateQueriesMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsAggregateQueriesConsumed__c / LimitsAggregateQueriesMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.AggregateQueries.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsAggregateQueriesConsumed__c / LimitsAggregateQueriesMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.AggregateQueries.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsAggregateQueriesConsumed__c / LimitsAggregateQueriesMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsAggregateQueriesConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsAggregateQueriesMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Aggregate Queries usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>Aggregate Queries</label>
    <type>Text</type>
</CustomField>