packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsAggregateQueriesConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsAggregateQueriesConsumed__c</fullName>
    <description>Aggregate queries consumed during transaction.</description>
    <inlineHelpText>Aggregate queries consumed during transaction.</inlineHelpText>
    <label>Aggregate Queries Consumed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>