packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsAggregateQueriesMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsAggregateQueriesMax__c</fullName>
    <description>Maximum aggregate queries limit.</description>
    <inlineHelpText>Maximum aggregate queries limit.</inlineHelpText>
    <label>Aggregate Queries Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>