packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsApexCursorFetchCalls__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorFetchCalls__c</fullName>
    <description>Apex Cursor Fetch Calls usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsApexCursorFetchCallsMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsApexCursorFetchCallsConsumed__c / LimitsApexCursorFetchCallsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.ApexCursorFetchCalls.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsApexCursorFetchCallsConsumed__c / LimitsApexCursorFetchCallsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.ApexCursorFetchCalls.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsApexCursorFetchCallsConsumed__c / LimitsApexCursorFetchCallsMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsApexCursorFetchCallsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsApexCursorFetchCallsMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Apex Cursor Fetch Calls usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>Apex Cursor Fetch Calls</label>
    <type>Text</type>
</CustomField>