packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsApexCursorFetchCallsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorFetchCallsConsumed__c</fullName>
    <description>Apex cursor fetch calls consumed during transaction.</description>
    <inlineHelpText>Apex cursor fetch calls consumed during transaction.</inlineHelpText>
    <label>Apex Cursor Fetch Calls Consumed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>