packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsApexCursorFetchCallsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorFetchCallsMax__c</fullName>
    <description>Maximum Apex cursor fetch calls limit.</description>
    <inlineHelpText>Maximum Apex cursor fetch calls limit.</inlineHelpText>
    <label>Apex Cursor Fetch Calls Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>