packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsApexCursorRows__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorRows__c</fullName>
    <description>Apex Cursor Rows usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsApexCursorRowsMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsApexCursorRowsConsumed__c / LimitsApexCursorRowsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.ApexCursorRows.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsApexCursorRowsConsumed__c / LimitsApexCursorRowsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.ApexCursorRows.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsApexCursorRowsConsumed__c / LimitsApexCursorRowsMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsApexCursorRowsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsApexCursorRowsMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Apex Cursor Rows usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>Apex Cursor Rows</label>
    <type>Text</type>
</CustomField>