packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsApexCursorRowsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorRowsConsumed__c</fullName>
    <description>Apex cursor rows consumed during transaction.</description>
    <inlineHelpText>Apex cursor rows consumed during transaction.</inlineHelpText>
    <label>Apex Cursor Rows Consumed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>