packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsApexCursorRowsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorRowsMax__c</fullName>
    <description>Maximum Apex cursor rows limit.</description>
    <inlineHelpText>Maximum Apex cursor rows limit.</inlineHelpText>
    <label>Apex Cursor Rows Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>