packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsCallouts__c.field-meta.xml
<CustomField>
    <fullName>LimitsCallouts__c</fullName>
    <description>Callouts usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsCalloutsMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsCalloutsConsumed__c / LimitsCalloutsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.Callouts.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsCalloutsConsumed__c / LimitsCalloutsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.Callouts.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsCalloutsConsumed__c / LimitsCalloutsMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsCalloutsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsCalloutsMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Callouts usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>Callouts</label>
    <type>Text</type>
</CustomField>