packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsCalloutsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsCalloutsConsumed__c</fullName>
    <description>Callouts consumed during transaction.</description>
    <inlineHelpText>Callouts consumed during transaction.</inlineHelpText>
    <label>Callouts Consumed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>