packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsCalloutsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsCalloutsMax__c</fullName>
    <description>Maximum callouts limit.</description>
    <inlineHelpText>Maximum callouts limit.</inlineHelpText>
    <label>Callouts Max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>