packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsCpuTime__c.field-meta.xml
<CustomField>
    <fullName>LimitsCpuTime__c</fullName>
    <description>CPU Time usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsCpuTimeMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsCpuTimeConsumed__c / LimitsCpuTimeMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.CpuTime.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsCpuTimeConsumed__c / LimitsCpuTimeMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.CpuTime.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsCpuTimeConsumed__c / LimitsCpuTimeMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsCpuTimeConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsCpuTimeMax__c) &amp; &quot; ms)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CPU Time usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>CPU Time</label>
    <type>Text</type>
</CustomField>