packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsCpuTimeConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsCpuTimeConsumed__c</fullName>
    <description>CPU time consumed during transaction (ms).</description>
    <inlineHelpText>CPU time consumed during transaction (ms).</inlineHelpText>
    <label>CPU Time Consumed (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>