packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsCpuTimeMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsCpuTimeMax__c</fullName>
    <description>Maximum CPU time limit (ms).</description>
    <inlineHelpText>Maximum CPU time limit (ms).</inlineHelpText>
    <label>CPU Time Max (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>