packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsDmlRows__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlRows__c</fullName>
    <description>DML Rows usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsDmlRowsMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsDmlRowsConsumed__c / LimitsDmlRowsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.DmlRows.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsDmlRowsConsumed__c / LimitsDmlRowsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.DmlRows.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsDmlRowsConsumed__c / LimitsDmlRowsMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsDmlRowsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsDmlRowsMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DML Rows usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>DML Rows</label>
    <type>Text</type>
</CustomField>