packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsDmlRowsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlRowsConsumed__c</fullName>
    <description>DML rows consumed during transaction.</description>
    <inlineHelpText>DML rows consumed during transaction.</inlineHelpText>
    <label>DML Rows Consumed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>