packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsDmlRowsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlRowsMax__c</fullName>
    <description>Maximum DML rows limit.</description>
    <inlineHelpText>Maximum DML rows limit.</inlineHelpText>
    <label>DML Rows Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>