packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsDmlStatements__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlStatements__c</fullName>
    <description>DML Statements usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</description>
    <formula>IF(LimitsDmlStatementsMax__c = 0, &quot;✅ N/A&quot;,
  IF(LimitsDmlStatementsConsumed__c / LimitsDmlStatementsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.DmlStatements.TransactionRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsDmlStatementsConsumed__c / LimitsDmlStatementsMax__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.DmlStatements.TransactionAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsDmlStatementsConsumed__c / LimitsDmlStatementsMax__c * 100, 1)) &amp; &quot;% (&quot;
  &amp; TEXT(LimitsDmlStatementsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(LimitsDmlStatementsMax__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DML Statements usage with visual indicator. Shows percentage of limit consumed with warning (80%) and danger (90%) thresholds.</inlineHelpText>
    <label>DML Statements</label>
    <type>Text</type>
</CustomField>