packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/LimitsDmlStatementsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlStatementsConsumed__c</fullName>
    <description>DML statements consumed during transaction.</description>
    <inlineHelpText>DML statements consumed during transaction.</inlineHelpText>
    <label>DML Statements Consumed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>